--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,9 +1,9 @@
 events:
-  game_ended: 236
-  game_started: 1067
+  game_ended: 238
+  game_started: 1081
 player:
   score:
-    average: 9041487.890625
+    average: 8940887.065637065
     top:
     - 492815500
     - 353326850
@@ -15,10 +15,10 @@ player:
     - 35334500
     - 35303850
     - 34361450
-    total: 256
+    total: 259
 shots:
   award_extraball: 93
-  captiveball: 897
+  captiveball: 904
   centertarget: 1541
   collectitem1: 4620
   collectitem2: 4562
@@ -30,28 +30,28 @@ shots:
   craft2: 637
   craft3: 613
   craft4: 624
-  enderdragon_shot: 1188
-  enderdragon_shot1: 71
-  enderdragon_shot10: 17
-  enderdragon_shot11: 29
-  enderdragon_shot12: 19
-  enderdragon_shot13: 184
-  enderdragon_shot14: 184
-  enderdragon_shot15: 184
-  enderdragon_shot16: 184
-  enderdragon_shot17: 428
-  enderdragon_shot2: 97
-  enderdragon_shot3: 97
-  enderdragon_shot4: 115
-  enderdragon_shot5: 83
-  enderdragon_shot6: 21
-  enderdragon_shot7: 14
-  enderdragon_shot8: 23
-  enderdragon_shot9: 16
+  enderdragon_shot: 1281
+  enderdragon_shot1: 190
+  enderdragon_shot10: 160
+  enderdragon_shot11: 193
+  enderdragon_shot12: 112
+  enderdragon_shot13: 732
+  enderdragon_shot14: 732
+  enderdragon_shot15: 732
+  enderdragon_shot16: 732
+  enderdragon_shot17: 511
+  enderdragon_shot2: 239
+  enderdragon_shot3: 230
+  enderdragon_shot4: 281
+  enderdragon_shot5: 232
+  enderdragon_shot6: 61
+  enderdragon_shot7: 126
+  enderdragon_shot8: 74
+  enderdragon_shot9: 95
   eyespinner: 594
-  leftslingshot: 5950
-  loopleft: 4600
-  loopright: 3812
+  leftslingshot: 5999
+  loopleft: 4831
+  loopright: 4022
   mb_drop1: 474
   mb_drop2: 1474
   mb_drop3: 1271
@@ -65,10 +65,10 @@ shots:
   mbnether_drop4: 56
   mbnether_drop5: 204
   mbnether_superjackpot: 8
-  popbumper1: 6073
-  popbumper2: 8791
-  popbumper3: 10865
-  rightslingshot: 4249
+  popbumper1: 6202
+  popbumper2: 8995
+  popbumper3: 11158
+  rightslingshot: 4303
   set1_center: 76
   set1_left: 161
   set1_right: 322
@@ -81,66 +81,68 @@ shots:
   set4_center: 61
   set4_left: 43
   set4_right: 127
-  skill_scoup: 533
-  spinner: 23349
+  skill_scoup: 537
+  spinner: 24411
   strongholdtravel: 37
   tool1: 2180
   tool2: 2821
   tool3: 1726
+  victoryloopleft_shot: 168
+  victoryloopright_shot: 99
   village_jackpot: 22
   villager_jackpot: 155
   villager_spinner: 114
   world_jackpot: 440
   worldspinner: 1659
 switches:
-  s_bumperrail: 7791
-  s_captiveball: 898
-  s_centertarget: 5664
-  s_collectitem1: 7774
-  s_collectitem2: 7797
-  s_collectitem3: 4941
-  s_collectitem4: 7437
-  s_collectitem5: 7121
+  s_bumperrail: 7847
+  s_captiveball: 905
+  s_centertarget: 5757
+  s_collectitem1: 7910
+  s_collectitem2: 7958
+  s_collectitem3: 5099
+  s_collectitem4: 7634
+  s_collectitem5: 7303
   s_credit_right: 0
-  s_drop1: 3153
-  s_drop2: 4922
-  s_drop3: 16357
-  s_drop4: 3103
-  s_drop5: 6694
-  s_drop6: 4290
-  s_left_flipper: 40624
-  s_leftinlane: 918
-  s_leftoutlane: 762
-  s_leftsling: 5953
-  s_loopleft: 4939
-  s_loopright: 4575
+  s_drop1: 3181
+  s_drop2: 4962
+  s_drop3: 16776
+  s_drop4: 3132
+  s_drop5: 6737
+  s_drop6: 4328
+  s_left_flipper: 41025
+  s_leftinlane: 923
+  s_leftoutlane: 775
+  s_leftsling: 6002
+  s_loopleft: 5170
+  s_loopright: 4785
   s_maint: 0
-  s_plungerlane: 4172
-  s_popbumper1: 6073
-  s_popbumper2: 8791
-  s_popbumper3: 10865
-  s_portal: 430
-  s_right_flipper: 34563
-  s_rightinlane: 187
+  s_plungerlane: 4295
+  s_popbumper1: 6202
+  s_popbumper2: 8995
+  s_popbumper3: 11158
+  s_portal: 457
+  s_right_flipper: 35012
+  s_rightinlane: 198
   s_rightoutlane: 391
-  s_rightsling: 4249
-  s_scoup: 2395
-  s_spinner: 23352
+  s_rightsling: 4303
+  s_scoup: 2445
+  s_spinner: 24414
   s_start: 63
   s_tilt: 0
-  s_tooltarget1: 3293
-  s_tooltarget2: 4081
-  s_tooltarget3: 2571
-  s_topbumperleft: 1942
-  s_topbumperright: 2834
-  s_topkicker: 7000
-  s_trough1: 3806
-  s_trough2: 3111
-  s_trough3: 2769
-  s_trough4: 2407
-  s_troughjam: 3167
+  s_tooltarget1: 3350
+  s_tooltarget2: 4203
+  s_tooltarget3: 2614
+  s_topbumperleft: 2014
+  s_topbumperright: 2942
+  s_topkicker: 7351
+  s_trough1: 3924
+  s_trough2: 3197
+  s_trough3: 2837
+  s_trough4: 2475
+  s_troughjam: 3253
   s_upperdrop: 2975
-  s_whitedot1: 1295
-  s_whitedot2: 1487
-  s_whitedot3: 1492
-  s_whitedot4: 1490
+  s_whitedot1: 1390
+  s_whitedot2: 1655
+  s_whitedot3: 1683
+  s_whitedot4: 1605
