--- a/modes/divertercontrol/config/divertercontrol.yaml
+++ b/modes/divertercontrol/config/divertercontrol.yaml
@@ -105,6 +105,24 @@ light_player:
     gi_loopupperleft: red
     gi_loopupperright: green
   
+#=== THE END MODES ==== #
+
+
+  #THE END BATTLE
+  divertercontrol_statechanged{current_player.diverter_state=="theendbattle"}:
+    gi_loopupperleft: red
+    gi_loopupperright: red
+
+
+  #THE END VICTORY
+  divertercontrol_statechanged{current_player.diverter_state=="theendvictory"}:
+    gi_loopupperleft: green
+    gi_loopupperright: green
+
+  #THE END TRAVEL
+  divertercontrol_statechanged{current_player.diverter_state=="theendtravel"}:
+    gi_loopupperleft: blue
+    gi_loopupperright: red
 
 timers:
   #CHECK STATE EVERY SECOND TO ADJUST DIVERTERS
@@ -187,22 +205,28 @@ event_player:
   divertercontrol_statechanged{current_player.diverter_state=="worldvillager"}: diverter_dropupperdrop
   divertercontrol_statechanged{current_player.diverter_state=="worldtoolsfull"}: diverter_dropupperdrop
   divertercontrol_statechanged{current_player.diverter_state=="multiballnether"}: diverter_dropupperdrop
+  divertercontrol_statechanged{current_player.diverter_state=="theendbattle"}: diverter_dropupperdrop
+  divertercontrol_statechanged{current_player.diverter_state=="theendvictory"}: diverter_dropupperdrop
+  divertercontrol_statechanged{current_player.diverter_state=="theendtravel"}: diverter_dropupperdrop
 
   #Right Loop Hit Events:
   loopright_hit{current_player.diverter_state=="worldidle"}: diverter_rightloophit, diverter_dropupperdrop
   loopright_hit{current_player.diverter_state=="multiballnether"}: diverter_rightloophit, diverter_dropupperdrop
   loopright_hit{current_player.diverter_state=="multiballvillager"}: diverter_rightloophit, diverter_dropupperdrop
+  loopright_hit{current_player.diverter_state=="theendvictory"}: diverter_rightloophit, diverter_dropupperdrop
    
   #Left Loop Hit Events:
   loopleft_hit{current_player.diverter_state=="multiballnether"}: diverter_leftloophit
   loopleft_hit{current_player.diverter_state=="worldtravel"}: diverter_leftloophit, diverter_leftlooptravelhit
   loopleft_hit{current_player.diverter_state=="strongholdtravel"}: diverter_leftloophit, diverter_leftlooptravelhit
+  loopleft_hit{current_player.diverter_state=="theendvictory"}: diverter_leftloophit
+  loopleft_hit{current_player.diverter_state=="theendtravel"}: diverter_leftloophit, diverter_leftlooptravelhit
 
   #DIVERTER CONTROLS
-  divertercontrol_statechanged.1{current_player.diverter_state=="worldtravel" or current_player.diverter_state == "strongholdtravel"}:
+  divertercontrol_statechanged.1{current_player.diverter_state=="worldtravel" or current_player.diverter_state == "strongholdtravel" or current_player.diverter_state == "theendtravel"}:
     diverter_travel_enabled
 
-  divertercontrol_statechanged.2{current_player.diverter_state!="worldtravel" and current_player.diverter_state != "strongholdtravel"}:
+  divertercontrol_statechanged.2{current_player.diverter_state!="worldtravel" and current_player.diverter_state != "strongholdtravel" and current_player.diverter_state != "theendtravel"}:
     diverter_travel_disabled
 
 
