--- a/modes/skillshot/config/skillshot.yaml
+++ b/modes/skillshot/config/skillshot.yaml
@@ -1,15 +1,13 @@
 #config_version=5
 mode:
   start_events: ball_started
-  stop_events:
-      - skill_success
-      - skill_failed
+  stop_events: skill_success, skill_failed
   priority: 500
 
 shots:
   skill_scoup:
     switch: s_scoup
-    profile: flash
+    profile: skillflash
     advance_events: mode_skill_shot_started
     show_tokens:
       light: gi_scoup
@@ -21,7 +19,7 @@ variable_player:
     world_jackpot_base: 10000
 
 shot_profiles:
-  flash:
+  skillflash:
     states:
       - name: unlit
         show: "flash"
